--- a/demo.cfg
+++ b/demo.cfg
@@ -90,26 +90,22 @@ alias "jtswitch5" "alias rewinder rewinder5; alias forwarder forwarder5; alias j
 
 
 // BINDINGS
-
 bind "C" "+duck"
-
 bind "V" "bulletsdecals"
-
 bind "SPACE" "+moveup"
-
 bind "CTRL" "+movedown"
-
 bind "CAPSLOCK" "+jump"
-
 bind "ALT" ""
 
+bind "F5" "hudon"
+bind "F6" "hudoff"
+bind "F7" "bulletsdecals"
 
 // ARROW KEYS
 bind "UPARROW" "+forward"
 bind "LEFTARROW" "+left"
 bind "RIGHTARROW" "+right"
 bind "DOWNARROW" "+back"
-
 
 // TOP KEYBOARD
 bind "1" "slot1"														//Player 1
@@ -136,7 +132,7 @@ bind "KP_9" "spec_mode 6"												//numpad 9		//Spec Mode
 bind "KP_0" "demo_togglepause"											//numpad 0		//TogglePause
 bind "KP_DEL" "toggle sv_allchat"										//numpad .		//TOGGLE CHAT
 bind "KP_DIVIDE" "toggle cl_mute_enemy_team"							//numpad /		//MUTE ENEMY TEAM
-bind "KP_MULTIPLY" ""				                            		//numpad *		//Noclip Bindings
+bind "KP_MULTIPLY" "demoui"				                            	//numpad *		//DEMOUI INTERFACE
 bind "KP_MINUS"	"toggle cl_mute_all_but_friends_and_party"				//numpad -		//MUTE UNKNOWN
 bind "KP_PLUS" "+fastmo"												//numpad +		//FASTMO ON PRESS
 bind "KP_ENTER"	"+slowmo"												//numpad enter	//SLOWMO ON PRESS
@@ -210,3 +206,5 @@ echo "        ***    *                                                          
 echo "        ***                                                                                    ***        "
 echo "        ******************************************************************************************        "
 echo ""
+
+play sounds\training\light_on
