--- a/demo.cfg
+++ b/demo.cfg
@@ -14,13 +14,6 @@ alias "bulletsdecals" "sv_cheats 1; bulletsdecalson"
 alias "bulletsdecalson" "sv_showimpacts 1; alias bulletsdecals bulletsdecalsoff; echo bulletsdecals on"
 alias "bulletsdecalsoff" "sv_showimpacts 0; alias bulletsdecals bulletsdecalson; echo bulletsdecals off"
 
-// BOT_CHATTER SWITCH
-alias "b_c" "b_c0"											//Default value
-alias "b_c0" "bot_chatter off; alias b_c b_c1"				//Bot Muted
-alias "b_c1" "bot_chatter radio; alias b_c b_c2"			//Bot Radio Only
-alias "b_c2" "bot_chatter minimal; alias b_c b_c3"			//Bot No Radio
-alias "b_c3" "bot_chatter normal; alias b_c b_c0"			//Bot Talk
-
 
 // TOGGLE DEMO SPEED
 
@@ -48,10 +41,12 @@ alias "fastdemo4" "demo_timescale 10; alias fastdemosw fastdemo0; echo x10"					
 
 // Slowmo hotkey
 alias "+slowmo" "demo_timescale 0.5"
+//bind "KEY" "+slowmo"
 alias "-slowmo" "demo_timescale 1"
 
 // Fastmo hotkey
 alias "+fastmo" "demo_timescale 2"
+//bind "KEY" "+fastmo"
 alias "-fastmo" "demo_timescale 1"
 
 
@@ -80,22 +75,21 @@ alias "forwarder5" "demo_gototick 5000 relative; reset_timescale; echo skip +1ro
 // JumpTick Switch
 alias "jtswitch" "jtswitch1"																				//JumpTickSwitch to bind
 //bind "KEY" "jtswitch"
-alias "jtswitch0" "alias rewinder rewinder0; alias forwarder forwarder0; alias jtswitch jtswitch1; echo jumptickLow"
-alias "jtswitch1" "alias rewinder rewinder1; alias forwarder forwarder1; alias jtswitch jtswitch2; echo jumptickLowMedium"
-alias "jtswitch2" "alias rewinder rewinder2; alias forwarder forwarder2; alias jtswitch jtswitch3; echo jumptickMedium"
-alias "jtswitch3" "alias rewinder rewinder3; alias forwarder forwarder3; alias jtswitch jtswitch4; echo jumptickFast"
-alias "jtswitch4" "alias rewinder rewinder4; alias forwarder forwarder4; alias jtswitch jtswitch5; echo jumptickMinute"
-alias "jtswitch5" "alias rewinder rewinder5; alias forwarder forwarder5; alias jtswitch jtswitch0; echo jumptickRound"
+alias "jtswitch0" "alias rewinder rewinder0; alias forwarder forwarder0; alias jtswitch jtswitch1; echo 3s"
+alias "jtswitch1" "alias rewinder rewinder1; alias forwarder forwarder1; alias jtswitch jtswitch2; echo 11s"
+alias "jtswitch2" "alias rewinder rewinder2; alias forwarder forwarder2; alias jtswitch jtswitch3; echo 23s"
+alias "jtswitch3" "alias rewinder rewinder3; alias forwarder forwarder3; alias jtswitch jtswitch4; echo 45s"
+alias "jtswitch4" "alias rewinder rewinder4; alias forwarder forwarder4; alias jtswitch jtswitch5; echo 1min"
+alias "jtswitch5" "alias rewinder rewinder5; alias forwarder forwarder5; alias jtswitch jtswitch0; echo 1round"
 
 
 
 // BINDINGS
 bind "C" "+duck"
-bind "V" "bulletsdecals"
 bind "SPACE" "+moveup"
 bind "CTRL" "+movedown"
 bind "CAPSLOCK" "+jump"
-bind "ALT" ""
+bind "ALT" "+sprint"
 
 bind "F5" "hudon"
 bind "F6" "hudoff"
@@ -144,7 +138,8 @@ bind "MOUSE3" "reset_timescale"
 bind "MOUSE4" "rewinder3"
 bind "MOUSE5" "forwarder3"
 
-////////////SETTINGS//////////
+
+// SETTINGS
 
 // Toggle switch between chat messages
 //ignoremsg	
