--- a/demo.cfg
+++ b/demo.cfg
@@ -141,6 +141,9 @@ bind "MOUSE5" "forwarder3"
 
 // SETTINGS
 
+// The command that toggle mouse on scoreboard (Replace with a command already bounded to the key you wanna use, ex : +attack -> mouse1; +attack2 -> mouse2
+cl_scoreboard_mouse_enable_binding "reset_timescale"                    // For MOUSE3
+
 // Toggle switch between chat messages
 //ignoremsg	
 
