--- a/demo.cfg
+++ b/demo.cfg
@@ -14,6 +14,12 @@ alias "bulletsdecals" "sv_cheats 1; bulletsdecalson"
 alias "bulletsdecalson" "sv_showimpacts 1; alias bulletsdecals bulletsdecalsoff; echo bulletsdecals on"
 alias "bulletsdecalsoff" "sv_showimpacts 0; alias bulletsdecals bulletsdecalson; echo bulletsdecals off"
 
+// BOT_CHATTER SWITCH
+alias "b_c" "b_c0"											//Default value
+alias "b_c0" "bot_chatter off; alias b_c b_c1"				//Bot Muted
+alias "b_c1" "bot_chatter radio; alias b_c b_c2"			//Bot Radio Only
+alias "b_c2" "bot_chatter minimal; alias b_c b_c3"			//Bot No Radio
+alias "b_c3" "bot_chatter normal; alias b_c b_c0"			//Bot Talk
 
 // TOGGLE DEMO SPEED
 
@@ -151,7 +157,9 @@ cl_scoreboard_mouse_enable_binding "reset_timescale"                    // For M
 //tv_nochat "1"																										
 
 // Hide chat panel
-//cl_chatfilter_version																								
+//cl_chatfilter_version
+
+cl_deathnotices_show_numbers "2"										//Show playernumber in deathnotice
 
 
 // Reset Timescale to its default value
